test/fail/apply_eval.cpp
#include <fit/apply_eval.hpp>

int main() {
    (void)fit::apply_eval(fit::always(), 1, 2);
}